tests/invalidTest/other/const_to_small_sub.q
# EXPECT invalid number because it is too big or too small
def void errorDef(){
    sint128 a = -170141183460469231731687303715884105728 - 1
}